--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ span{
     padding: 3% 17%;
 }
 #title {
-    background-image:url("/images/bg1.png") ;
+    background-image:url("images/bg1.png") ;
     text-align: center;
    
 
@@ -138,7 +138,7 @@ max-width: 100%;
    
     padding: 0 17% 3%;
     text-align: center;
-    background-image: url(/images/bg1.png);
+/*     background-image: url(images/bg1.png); */
 }
 .samps{
  margin-bottom: 20px;  
@@ -243,7 +243,7 @@ ul{
  #footer{
     padding:  1% 17%  ;
   text-align: center;
-  background-image: url(/images/bg1.png);
+  background-image: url(images/bg1.png);
  }
  
 .foot{
